tests/reference/asr-list1-770ba33.stderr
semantic error: For now pop() takes no arguments
  --> tests/list1.py:25:9
   |
25 |     d = a.pop(2)
   |         ^^^^^^^^ 
